example/secondfile/objects/Criteria__c.object
<CustomObject>
    <fields>
        <fullName>AndOrFormula__c</fullName>
        <formula>CASE(And_Or__c ,
&quot;AND&quot;, 1,
&quot;OR&quot;, 2,
3)</formula>
        <label>AndOrFormula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>And_Or__c</fullName>
        <label>And_Or</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_Order__c</fullName>
        <label>Category Order</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Rule_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comparison__c</fullName>
        <label>Comparison</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>less or equal</fullName>
                </value>
                <value>
                    <fullName>greater or equal</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CriteriaNumber__c</fullName>
        <label>CriteriaNumber</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Criteria_Name__c</fullName>
        <label>Criteria Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Reg_Approval_Date__c</fullName>
        <label>Deal Reg Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Reg_Decision__c</fullName>
        <description>Deal Reg approval or denial decision</description>
        <label>Deal Reg Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Deny</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Reg_Discount__c</fullName>
        <label>Deal Reg Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Default_Deal_Reg_Discount__c</fullName>
        <label>Default Deal Reg Discount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EC_Address__c</fullName>
        <description>Address of the End Customer</description>
        <label>EC Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Name__c</fullName>
        <description>Name of the End Customer</description>
        <label>EC Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_Data_Type__c</fullName>
        <label>Input Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_Field__c</fullName>
        <label>Input Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator_Formula__c</fullName>
        <formula>CASE(Operator__c,
&quot;&gt;&quot;, 0,
&quot;&lt;&quot;, 1,
&quot;=&quot;, 2,
&quot;!=&quot;, 3,
4)</formula>
        <label>Operator Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Name of the Product</description>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AVPN</fullName>
                </value>
                <value>
                    <fullName>MIS</fullName>
                </value>
                <value>
                    <fullName>ANIRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promotion_Engine__c</fullName>
        <label>Promotion Engine</label>
        <referenceTo>Promotion_Engine__c</referenceTo>
        <relationshipLabel>Criteria</relationshipLabel>
        <relationshipName>Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rule_Category__c</fullName>
        <label>Rule Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Level Discount</fullName>
                </value>
                <value>
                    <fullName>SP Type</fullName>
                </value>
                <value>
                    <fullName>SP Account</fullName>
                </value>
                <value>
                    <fullName>Duplicate EC &amp; Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rule_End_Date__c</fullName>
        <label>Rule End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rule_Start_Date__c</fullName>
        <label>Rule Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SP_Account_Address__c</fullName>
        <label>SP Account Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Account_Name__c</fullName>
        <label>SP Account Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sp_Type__c</fullName>
        <label>Sp Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Consumption</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Criteria_Name__c</columns>
        <columns>CriteriaNumber__c</columns>
        <columns>Input_Field__c</columns>
        <columns>Promotion_Engine__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CE-{00000}</displayFormat>
        <label>Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>